Use List.copyOf and List.of instead of Collections.unmodifiableList